[package]
name = "coremlit"
description = "Safe, synchronous CoreML runtime with opt-in on-device audio pipelines (Whisper STT, forced alignment, speaker diarization, Silero VAD)"
version.workspace = true
edition.workspace = true
# Unpublishable: the optional `align` / `speaker` / `vad` features pull
# rev-pinned git dependencies (`asry`, `dia`/diarization, `silero`) — crates.io
# forbids git sources even behind optional features, and none are published.
# Flip once they all land on released versions.
publish = false
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["coreml", "machine-learning", "macos", "speech", "neural-engine"]
categories = ["multimedia::audio", "os::macos-apis", "science", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin"]

[features]
default = []

# --- cross-cutting (unified from the former per-kit `serde`/`tracing`) ---
serde = ["dep:serde"]
tracing = ["dep:tracing"]

# --- audio::whisper (former crate `whisperkit`) ---
# whisperkit's `[dependencies]` were unconditional in that crate; collapsed
# here they become optional and ride `whisper`, so the runtime core stays
# dependency-lean and `default = []` pulls none of them.
whisper = [
  "dep:libc",
  "dep:mach2",
  "dep:rand",
  "dep:serde_json",
  "dep:tokenizers",
  "dep:unicode_categories",
]
# Former whisperkit `nl-recognizer` (Apple `NLLanguageRecognizer` redetection).
# Whisper-only code, so it implies `whisper`.
nl-recognizer = ["whisper", "dep:objc2-natural-language"]

# --- audio::align (former crate `alignkit`) ---
# asry's clean `emissions` seam (NO ort / whisper.cpp) rides `align`.
align = ["dep:asry"]
# Former alignkit `parity-oracle`: asry's ONNX aligner (pulls ort + whisper.cpp)
# as the word-timing parity oracle. DEV/TEST only — adds nothing to the library.
align-oracle = ["align", "asry/alignment"]

# --- audio::speaker (former crate `speakerkit`) ---
# `diaric` is the backend-free runtime clustering CORE — offline AHC→VBx
# (`diaric::offline::diarize_offline`), the online centroid matcher
# (`diaric::cluster::online`), PLDA projection, and reconstruction. Clustering
# is a PUBLIC RUNTIME capability of the speaker module (`Extraction::diarize` /
# `diarize_with` / `diarize_online`), not a test-only harness step. `diaric` is
# backend-free BY CONSTRUCTION (the ONNX/Torch runners live in the separate
# `diarization` crate, never here), so the `speaker` runtime graph pulls no
# `ort` in ANY configuration. The former speakerkit `dia` feature is gone: the
# runtime clustering dep is now `diaric`, and `dia` is demoted to the test-only
# DER oracle below.
speaker = ["dep:diaric"]
# Former speakerkit `dia-oracle`: the TEST-ONLY DER reference oracle. Pulls the
# optional `dia` (`diarization`) crate and turns ON its OWN ort inference
# (bundled `segmentation-3.0` + BYO fp32 WeSpeaker ONNX) so the DER parity
# suites score the speaker module's CoreML output against dia-ort. Pulls `ort` +
# `libonnxruntime` and the ~6 MB embedded model — never in the runtime graph;
# the always-on (under `speaker`) `diaric` bridge stays ort-free.
# `dia/bundled-segmentation` already implies `dia/ort`; both named for clarity.
speaker-oracle = ["speaker", "dep:dia", "dia/ort", "dia/bundled-segmentation"]

# --- audio::vad (former crate `vadkit`) ---
# silero's logic-only detector seam (NO ort) rides `vad`.
vad = ["dep:silero"]
# Former vadkit dev-only `bundled`: silero's ONNX reference stack for the
# cross-backend characterization oracle. DEV/TEST only — pulls ort.
vad-bundled = ["vad", "silero/bundled"]

# --- embeddings::clap (former crate `clapkit`) ---
# CLAP-HTSAT dual-tower audio+text encoders on CoreML: a Rust mel/STFT front-end
# (`rustfft`) around two fp16 graphs, plus the pinned Xenova tokenizer
# (`tokenizers`, shared with `whisper`). NO ort in this path; `default = []`
# pulls none of it.
clap = ["dep:rustfft", "dep:tokenizers", "dep:windit"]
# Former clapkit `parity-oracle`: the textclap model-level parity oracle (its
# Xenova ONNX via `ort`) for the characterized parity gates. DEV/TEST only —
# adds nothing to the library. clapkit links only textclap's BUNDLED_TOKENIZER
# const, so the gate needs no libonnxruntime at run time.
clap-oracle = ["clap", "dep:textclap"]

# --- embeddings::granite (the embedkit phase) ---
# General text sentence-embeddings on CoreML; first model
# `granite-embedding-97m-multilingual-r2` (ModernBERT + CLS pooling, 384-d). A
# bundled granite tokenizer (`tokenizers`, shared with `whisper`/`clap`) around
# the fp16 CoreML graph, L2-normalized in Rust. The parity oracle is COMMITTED
# transformers-fp32 goldens (`tests/granite/fixtures/goldens/`), never a live
# ONNX crate — so there is NO `granite-oracle` feature and NO `ort` in this path.
# `default = []` pulls none of it.
granite = ["dep:tokenizers", "dep:windit", "windit/text"]

[dependencies]
# --- core CoreML runtime (always compiled) ---
objc2.workspace = true
objc2-core-ml.workspace = true
objc2-foundation.workspace = true
objc2-core-video.workspace = true
objc2-core-foundation.workspace = true
block2.workspace = true
half.workspace = true
thiserror.workspace = true
derive_more.workspace = true

# --- cross-cutting optionals ---
serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# --- audio::whisper optionals ---
libc = { workspace = true, optional = true }
mach2 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
unicode_categories = { workspace = true, optional = true }
objc2-natural-language = { workspace = true, optional = true }

# --- audio::align optional git dep (the `align` feature) ---
# The clean, ort-free dependency: asry's `emissions` seam only (no whispercpp,
# no ort). Rev-pinned to a PUBLIC git source, NOT a sibling path: a clean
# checkout of this repo alone resolves and builds, with no co-located `asry`
# checkout required. A sibling `asry` is now only TEST DATA — for the ignored
# oracle gates that read asry's `models/` fixtures (`ALIGNKIT_ASRY_MODELS`, see
# `tests/align/common/mod.rs`). The rev is asry's reviewed `main` HEAD at the
# time the align surface was cut. Co-developing asry and coremlit together?
# Point both at your local `asry` with an UNCOMMITTED workspace-root patch (add
# to the root `Cargo.toml`, never commit it):
#
#   [patch."https://github.com/findit-studio/asry"]
#   asry = { path = "../asry" }
#
asry = { git = "https://github.com/findit-studio/asry", rev = "49cbfc9ca6fb75366d75a862212bdebb889021e5", default-features = false, features = ["emissions"], optional = true }

# --- audio::speaker optional git deps ---
# `diaric` is the backend-free speaker-diarization CORE consumed as the RUNTIME
# clustering dependency (the `speaker` feature): offline clustering
# (`diaric::offline::diarize_offline`, AHC→VBx), the online centroid matcher
# (`diaric::cluster::online`), PLDA projection, and reconstruction. Call sites
# read `diaric::offline::diarize_offline` etc. `optional = true` + pulled by
# `speaker` because the whole `audio::speaker` module is feature-gated; when the
# module compiles, `diaric` is always present, so its bridge / clustering is
# unconditional within the module.
#
# No `default-features` to strip: `diaric` is backend-free BY CONSTRUCTION — the
# ONNX/Torch model runners live in the separate `diarization` crate, never here
# — so the runtime clustering graph pulls no `ort`/onnxruntime in ANY
# configuration (diaric's own default feature set is empty).
#
# ORT-FREE PROOF — the runtime configuration pulls no `ort` crate:
#   cargo tree -p coremlit --features speaker -e normal | grep -iw ort   # → no match
# Contrast — the test-only `speaker-oracle` feature DOES pull it (via the `dia`
# oracle dep below):
#   cargo tree -p coremlit --features speaker-oracle -e normal | grep -iw ort
#
# Pinned to the public diaric repo by EXACT rev, not a sibling path (a path dep
# breaks a fresh `cargo metadata` on any checkout lacking the sibling). CO-DEV:
# to build against a LOCAL diaric checkout, add an UNCOMMITTED `[patch]` to the
# WORKSPACE ROOT Cargo.toml — mirror the asry recipe above:
#
#   [patch."https://github.com/findit-studio/diaric"]
#   diaric = { path = "../diaric" }
#
# TODO re-pin to diaric 0.1 (published, and its `feat/import-core` PR has
# merged); this port pins the exact rev the clustering feature was fence-approved
# against, so the re-pin is a separate follow-up.
diaric = { git = "https://github.com/findit-studio/diaric", rev = "877189e434aff080c1340313caf8801cea946af3", optional = true }

# `dia` (package `diarization`) is the TEST-ONLY DER reference oracle, pulled
# ONLY by `speaker-oracle` — never in the runtime graph. It carries dia's OWN
# `ort` inference path (bundled `segmentation-3.0` + BYO fp32 WeSpeaker ONNX) so
# the parity suites score the speaker module's CoreML output against dia-ort.
# Pinned by EXACT rev, not a sibling path (a path dep breaks a fresh
# `cargo metadata`); `default-features = false` keeps the bare dep lean until
# `speaker-oracle` turns on its ONNX inference. CO-DEV: patch at the WORKSPACE
# ROOT Cargo.toml, mirroring the diaric/asry recipes; do not edit this line.
dia = { package = "diarization", git = "https://github.com/findit-studio/diarization", rev = "b6a6f9adc8465f7a4c207dbaa2701d98e1be1ff2", default-features = false, optional = true }

# --- audio::vad optional git dep (the `vad` feature) ---
# The detection/streaming logic single-home: coremlit's vad layer implements
# silero's `VadBackend` seam over CoreML and re-exports silero's detector
# surface wired to that backend, authoring ZERO segmentation logic here.
# `default-features = false` selects the LOGIC-ONLY silero crate — NO `ort`/ONNX
# backend compiled, so `ort` never enters the `vad` runtime graph. The ONNX
# reference stack is DEV/TEST-only behind `vad-bundled` (`silero/bundled`).
# Pinned to silero's merged `main` (0.5.0 seam) by full git REV — the earlier
# `9ad65749` seam-branch rev was squashed away by silero#11's squash-merge
# (the squash preserved the tree, so content is identical); RE-PIN to
# `silero = "0.5.0"` once it publishes (does not change this no-`ort`,
# logic-only posture).
silero = { git = "https://github.com/Findit-AI/silero", rev = "a55ef2b2922ec14250e6a5b3a4b30596f018454c", default-features = false, optional = true }

# --- embeddings::clap optionals (the `clap` feature) ---
# f64 forward FFT for the Slaney-mel front-end — the same crate + major version
# textclap's `mel.rs` uses, so the ported numerics match on the scalar path
# (see `src/embeddings/clap/audio/mel/mod.rs`). clap-only; the pinned Xenova
# `tokenizers` load is shared with `whisper` (declared above, rides `clap` too).
rustfft = { workspace = true, optional = true }

# --- embeddings::clap oracle git dep (the `clap-oracle` feature) ---
# The textclap oracle: rev-pinned to a PUBLIC git source (crates.io forbids git
# sources, and textclap is unpublished), OPTIONAL and only COMPILED/linked under
# `clap-oracle`. An ordinary default build never links it — so clap's default
# path pulls in no `ort` — but Cargo's resolver still RESOLVES it (optional deps
# are always part of whole-graph resolution), so a fresh default invocation
# fetches this git source and pins it in `Cargo.lock`. clapkit calls only
# textclap's `BUNDLED_TOKENIZER` const (no `ort` runtime), so the gate needs no
# `libonnxruntime` at run time. CO-DEV: patch at the WORKSPACE ROOT (never
# commit it):
#
#   [patch."https://github.com/Findit-AI/textclap"]
#   textclap = { path = "../textclap" }
#
textclap = { git = "https://github.com/Findit-AI/textclap", rev = "584f21754337a0f6cc7575fa83e9e49a38e99ee9", optional = true }

# --- embeddings shared windowing engine (the `clap` + `granite` features) ---
# `windit` is the generic windowed-sequence engine (plan / split / aggregate)
# both embedding families consume: CLAP's long-audio window geometry +
# aggregation and granite's `embed_long` content-aware chunking + aggregation
# ride it. Rev-pinned to the PUBLIC windit repo at its reviewed main HEAD (the
# asry/diaric convention). windit 0.1.0 is also published on crates.io with the
# same API surface; RE-PIN to `windit = "0.1"` in the same follow-up wave as
# the silero/diaric re-pins (does not change the feature posture below).
# windit's default features stay on (`alloc` — the planner/aggregate/split `Vec`
# APIs live there); `serde` is NOT enabled (clap keeps its own wire-pinned config
# types; granite serializes nothing of windit's), nor `half`, nor `std` (windit
# uses `core::error::Error`). `windit/text` rides `granite` only (content-aware
# chunking → `unicode-segmentation`); a clap-only build stays free of it.
# CO-DEV: to build against a LOCAL windit checkout, add an UNCOMMITTED patch to
# the WORKSPACE ROOT Cargo.toml (never commit it):
#
#   [patch."https://github.com/findit-studio/windit"]
#   windit = { path = "../windit" }
#
windit = { git = "https://github.com/findit-studio/windit", rev = "b49888002bcbf4927cf69e83323f15652655eed0", optional = true }

[dev-dependencies]
# Integration tests / benches / examples are external consumers: they link the
# crate + these dev-deps, never the lib's own `[dependencies]`. `half` (the
# fp16_guards sweep) and the audio/test-support crates are named here again.
half.workspace = true
cpal.workspace = true
criterion.workspace = true
hound.workspace = true
rubato.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokenizers.workspace = true
# The mel-parity unit tests (`src/embeddings/clap/audio/mel/tests.rs`, feature
# `clap`) read committed librosa `.npy` mel oracles via `npyz` (former clapkit
# dev-dep).
npyz.workspace = true
# The `clap_encode` bench reports process RSS via `task_info(MACH_TASK_BASIC_INFO)`
# (the same query as `audio::whisper::log::resident_memory_bytes`, which rides the
# `whisper` feature the bench does not enable). Dev-deps compile only for
# tests/benches/examples, so this adds nothing to the library's feature graph.
libc.workspace = true
mach2.workspace = true
# `tests/align/parity_words.rs` names `asry::Aligner` (the ONNX oracle) and
# `asry::ort::api()` directly, so asry must appear as a dev-dep too. Cargo
# unions its features with the optional runtime entry above; `align-oracle`
# adds `alignment`. `emissions` here keeps a features-free default `cargo test`
# from trying to build a zero-feature asry.
asry = { git = "https://github.com/findit-studio/asry", rev = "49cbfc9ca6fb75366d75a862212bdebb889021e5", default-features = false, features = ["emissions"] }

# ---------------------------------------------------------------------------
# Per-kit tests / benches / examples.
#
# Each former kit crate's tests now live in tests/<kit>/ (benches/<kit>/,
# examples/<kit>/). Cargo auto-discovers only depth-1 files, so the coremlit
# core's own tests (tests/*.rs) stay auto-discovered while every kit target is
# registered explicitly here. `required-features` gates each on its module
# feature (the whole `audio::<kit>` module is feature-gated, so its tests only
# compile under that feature) — the oracle suites on the oracle feature.
# ---------------------------------------------------------------------------

# --- audio::whisper ---
[[test]]
name = "whisper_longform"
path = "tests/whisper/longform.rs"
required-features = ["whisper"]

[[test]]
name = "whisper_model_io"
path = "tests/whisper/model_io.rs"
required-features = ["whisper"]

[[test]]
name = "whisper_models_lock"
path = "tests/whisper/models_lock.rs"
required-features = ["whisper"]

[[test]]
name = "whisper_parity_es"
path = "tests/whisper/parity_es.rs"
required-features = ["whisper"]

[[test]]
name = "whisper_parity_jfk"
path = "tests/whisper/parity_jfk.rs"
required-features = ["whisper"]

[[test]]
name = "whisper_pipeline"
path = "tests/whisper/pipeline.rs"
required-features = ["whisper"]

[[test]]
name = "whisper_streaming"
path = "tests/whisper/streaming.rs"
required-features = ["whisper"]

# The Silero-VAD source path is the whisper+vad composition (former whisperkit
# `vadkit` feature).
[[test]]
name = "whisper_vad_source"
path = "tests/whisper/vad_source.rs"
required-features = ["whisper", "vad"]

# rtf.rs is compiled BOTH as a harness-less bench (its real end-to-end main)
# and, under the default libtest harness, as this test target so its inline
# #[cfg(test)] `models_ready` gate runs under `cargo test`. Cargo prints an
# informational "present in multiple build targets" note for the shared path,
# which is expected and harmless.
[[test]]
name = "whisper_rtf_gate"
path = "benches/whisper/rtf.rs"
required-features = ["whisper"]

[[bench]]
name = "whisper_stages"
path = "benches/whisper/stages.rs"
harness = false
required-features = ["whisper"]

[[bench]]
name = "whisper_rtf"
path = "benches/whisper/rtf.rs"
harness = false
required-features = ["whisper"]

# `test = true` compiles this example under the libtest harness too, so its
# inline #[cfg(test)] hermetic BoundedAudioQueue tests run under `cargo test`;
# `main` is compiled (type-checked) but never executed, so no microphone opens.
[[example]]
name = "whisper_mic_stream"
path = "examples/whisper/mic_stream.rs"
test = true
required-features = ["whisper"]

[[example]]
name = "whisper_transcribe_wav"
path = "examples/whisper/transcribe_wav.rs"
required-features = ["whisper"]

# --- audio::align ---
[[test]]
name = "align_align_chunk"
path = "tests/align/align_chunk.rs"
required-features = ["align"]

[[test]]
name = "align_align_chunk_equivalence"
path = "tests/align/align_chunk_equivalence.rs"
required-features = ["align"]

[[test]]
name = "align_model_io"
path = "tests/align/model_io.rs"
required-features = ["align"]

[[test]]
name = "align_prepared_composition"
path = "tests/align/prepared_composition.rs"
required-features = ["align"]

[[test]]
name = "align_registry_handle"
path = "tests/align/registry_handle.rs"
required-features = ["align"]

# The word-timing parity gate needs asry's ONNX aligner oracle (ort +
# whisper.cpp) — the former alignkit `parity-oracle`, now `align-oracle`.
[[test]]
name = "align_parity_words"
path = "tests/align/parity_words.rs"
required-features = ["align-oracle"]

[[bench]]
name = "align_align"
path = "benches/align/align.rs"
harness = false
required-features = ["align"]

# --- audio::speaker ---
[[test]]
name = "speaker_argmax_model_io"
path = "tests/speaker/argmax_model_io.rs"
required-features = ["speaker"]

[[test]]
name = "speaker_golden_metadata"
path = "tests/speaker/golden_metadata.rs"
required-features = ["speaker"]

[[test]]
name = "speaker_model_io"
path = "tests/speaker/model_io.rs"
required-features = ["speaker"]

[[test]]
name = "speaker_parity_argmax_accuracy"
path = "tests/speaker/parity_argmax_accuracy.rs"
required-features = ["speaker"]

[[test]]
name = "speaker_parity_argmax_swift"
path = "tests/speaker/parity_argmax_swift.rs"
required-features = ["speaker"]

[[test]]
name = "speaker_parity_embed"
path = "tests/speaker/parity_embed.rs"
required-features = ["speaker"]

[[test]]
name = "speaker_parity_seg"
path = "tests/speaker/parity_seg.rs"
required-features = ["speaker"]

# Hermetic online-clusterer parity vs FluidAudio's Swift `SpeakerManager`: a
# committed synthetic trace, no dia oracle and no models, so it rides the
# default `speaker` suite (diaric + committed fixtures only).
[[test]]
name = "speaker_parity_online_swift"
path = "tests/speaker/parity_online_swift.rs"
required-features = ["speaker"]

# Model-gated proof that `Extraction::diarize` is one code path with the manual
# `into_offline_input → diarize_offline` plumbing. diaric-only (no dia oracle),
# so it gates on `speaker`; its assertions are `#[ignore]`d behind the models.
[[test]]
name = "speaker_parity_diarize_wiring"
path = "tests/speaker/parity_diarize_wiring.rs"
required-features = ["speaker"]

# The DER parity suites are #![cfg(feature = "speaker-oracle")] and drive dia's
# own ort inference (former speakerkit `dia-oracle`).
[[test]]
name = "speaker_parity_e2e"
path = "tests/speaker/parity_e2e.rs"
required-features = ["speaker-oracle"]

[[test]]
name = "speaker_parity_shipping_der"
path = "tests/speaker/parity_shipping_der.rs"
required-features = ["speaker-oracle"]

[[test]]
name = "speaker_generate_goldens"
path = "tests/speaker/generate_goldens.rs"
required-features = ["speaker-oracle"]

# Cross-crate equivalence gates under the dual-crate DER oracle: they compare
# the measured (diaric) offline path against the dia-ort reference, so both
# `diaric` and the `dia` oracle must be linked — hence `speaker-oracle`.
[[test]]
name = "speaker_offline_cross_crate_equivalence"
path = "tests/speaker/offline_cross_crate_equivalence.rs"
required-features = ["speaker-oracle"]

[[test]]
name = "speaker_plda_cross_crate_equivalence"
path = "tests/speaker/plda_cross_crate_equivalence.rs"
required-features = ["speaker-oracle"]

# --- audio::vad ---
[[test]]
name = "vad_model_io"
path = "tests/vad/model_io.rs"
required-features = ["vad"]

[[test]]
name = "vad_model_state"
path = "tests/vad/model_state.rs"
required-features = ["vad"]

[[test]]
name = "vad_parity_swift"
path = "tests/vad/parity_swift.rs"
required-features = ["vad"]

[[test]]
name = "vad_reexport"
path = "tests/vad/reexport.rs"
required-features = ["vad"]

# The cross-backend characterization oracle drives silero's bundled ONNX stack
# (former vadkit dev-only `bundled`, now `vad-bundled`).
[[test]]
name = "vad_cross_backend"
path = "tests/vad/cross_backend.rs"
required-features = ["vad-bundled"]

# --- embeddings::clap ---
# The whole `embeddings::clap` module is feature-gated, so its tests compile
# only under `clap`; the model-gated ones keep their `#[ignore]` + Models/
# layout.
[[test]]
name = "clap_e2e"
path = "tests/clap/e2e.rs"
required-features = ["clap"]

[[test]]
name = "clap_model_io"
path = "tests/clap/model_io.rs"
required-features = ["clap"]

[[test]]
name = "clap_text_model_io"
path = "tests/clap/text_model_io.rs"
required-features = ["clap"]

[[test]]
name = "clap_placement"
path = "tests/clap/placement.rs"
required-features = ["clap"]

[[test]]
name = "clap_tokenizer_identity"
path = "tests/clap/tokenizer_identity.rs"
required-features = ["clap"]

# The textclap parity oracles (former clapkit `parity-oracle`, now `clap-oracle`)
# link the sibling textclap crate (pulls ort) for the model-level parity gate
# and the live tokenizer cross-check.
[[test]]
name = "clap_parity_textclap"
path = "tests/clap/parity_textclap.rs"
required-features = ["clap-oracle"]

[[test]]
name = "clap_tokenizer_identity_textclap"
path = "tests/clap/tokenizer_identity_textclap.rs"
required-features = ["clap-oracle"]

# --- embeddings::granite ---
# The whole `embeddings::granite` module is feature-gated, so its tests compile
# only under `granite`. The tokenizer-identity gate is hermetic (committed
# goldens, no model) and runs in the default `granite` suite; the model_io /
# parity / placement gates keep their `#[ignore]` + Models/ layout. There is NO
# oracle feature — parity scores against COMMITTED transformers-fp32 goldens.
[[test]]
name = "granite_tokenizer_identity"
path = "tests/granite/tokenizer_identity.rs"
required-features = ["granite"]

[[test]]
name = "granite_model_io"
path = "tests/granite/model_io.rs"
required-features = ["granite"]

[[test]]
name = "granite_parity_embed"
path = "tests/granite/parity_embed.rs"
required-features = ["granite"]

[[test]]
name = "granite_placement"
path = "tests/granite/placement.rs"
required-features = ["granite"]

# The long-input windowing gate: content-aware chunk geometry is proven hermetic
# in-lib; this suite gates the CoreML per-chunk embedding + windit aggregation on
# the staged granite artifact (`#[ignore]` + Models/ layout, like the others).
[[test]]
name = "granite_embed_long"
path = "tests/granite/embed_long.rs"
required-features = ["granite"]
# Dual-tower encode harness: first-observed/cached load, first + warm inference
# per tower × ComputeUnits (model-gated; `harness = false` custom main — the load
# phases are one-shot costs criterion's resampling cannot see). Mirrors the
# whisper/align bench registrations above.
[[bench]]
name = "clap_encode"
path = "benches/clap/encode.rs"
harness = false
required-features = ["clap"]

[lints]
workspace = true
