[package]
name = "dia-coreml"
description = "Native CoreML segmentation and embedding backends for the dia speaker-diarization pipeline"
version.workspace = true
edition.workspace = true
# Unpublishable until the `diarization` sibling publishes (the optional
# `dia` path dependency has no registry version); flip when it does.
publish = false
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["diarization", "speaker", "coreml", "speech", "ane"]
categories = ["multimedia::audio", "os::macos-apis", "science"]

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin"]

[dependencies]
coremlit.workspace = true
thiserror.workspace = true

# Renamed to `dia` (its own package name is `diarization`) so call sites read
# `dia::offline::OfflineInput` etc., matching the design spec's API (§5).
# Path is relative to THIS crate (crates/dia-coreml): three levels up
# (crates/dia-coreml -> crates -> coremlit workspace root -> findit-studio)
# then into the sibling `diarization` checkout — verified with `cargo
# metadata` (see task-1-report.md), not the two-level guess that would
# resolve inside the coremlit workspace itself.
dia = { package = "diarization", path = "../../../diarization", optional = true }
serde = { workspace = true, optional = true }

[features]
default = []
dia = ["dep:dia"]
serde = ["dep:serde"]

[dev-dependencies]
hound.workspace = true
serde_json.workspace = true

[lints]
workspace = true
