[package]
name = "speakerkit"
description = "Native CoreML segmentation and embedding backends for the dia speaker-diarization pipeline"
version.workspace = true
edition.workspace = true
# Unpublishable while `diaric` (runtime) and the `dia`/`diarization` oracle are
# git dependencies with no registry version; flip when they publish.
publish = false
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["diarization", "speaker", "coreml", "speech", "ane"]
categories = ["multimedia::audio", "os::macos-apis", "science"]

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin"]

[dependencies]
coremlit.workspace = true
# `derive_more::Display` powers the `ClusterBackend` golden-enum's derived
# `Display` (delegating to its `as_str`), matching the workspace convention
# (`coremlit::ComputeUnits`, `whisperkit::Task`). Inherits the workspace
# `display`/`is_variant` features; only `display` is used here.
derive_more.workspace = true
thiserror.workspace = true

# `diaric` is the backend-free speaker-diarization CORE — offline clustering
# (`diaric::offline::diarize_offline`, AHC→VBx), the online centroid matcher
# (`diaric::cluster::online`), PLDA projection, pipeline assembly and
# reconstruction — consumed as a RUNTIME dependency: clustering is a public
# runtime capability of this crate (`Extraction::diarize` / `diarize_with` /
# `diarize_online`), not a test-only harness step. Call sites read
# `diaric::offline::diarize_offline` etc. (design spec §5).
#
# Pinned to the public diaric repo by EXACT rev, not a sibling path: a path dep
# breaks a fresh `cargo metadata` on any checkout lacking the sibling, because
# Cargo loads a path-dep manifest at resolution time. Re-pin to diaric's MERGE
# sha once its `feat/import-core` PR lands on `main`.
#
# No `default-features` to strip: diaric is backend-free BY CONSTRUCTION — the
# ONNX/Torch model runners live in the separate `diarization` crate, never here
# — so the runtime clustering graph pulls no `ort`/onnxruntime in ANY
# configuration (diaric's own default feature set is empty).
#
# ORT-FREE PROOF — the runtime configuration pulls no `ort` crate:
#   cargo tree -p speakerkit -e normal | grep -iw ort   # → no match
# Contrast — the test-only `dia-oracle` feature DOES pull it (via the `dia`
# oracle dep below):
#   cargo tree -p speakerkit --features dia-oracle -e normal | grep -iw ort
diaric = { git = "https://github.com/findit-studio/diaric", rev = "877189e434aff080c1340313caf8801cea946af3" }

# `dia` (package `diarization`) is the TEST-ONLY DER reference oracle, kept as a
# SELF-CONTAINED pre-split rev (`origin/main` at the time the DER gates were
# written): it carries dia's OWN `ort` inference path (bundled `segmentation-3.0`
# + BYO fp32 WeSpeaker ONNX) so the parity suites score speakerkit's CoreML
# output against dia-ort. OPTIONAL, activated only by the `dia-oracle` feature
# below — never in the runtime graph. Pinned by EXACT rev, not a sibling path (a
# path dep breaks a fresh `cargo metadata`); `default-features = false` keeps the
# bare dep lean until `dia-oracle` turns on its ONNX inference.
dia = { package = "diarization", git = "https://github.com/findit-studio/diarization", rev = "b6a6f9adc8465f7a4c207dbaa2701d98e1be1ff2", default-features = false, optional = true }
serde = { workspace = true, optional = true }

[features]
default = []
# TEST-ONLY oracle. Pulls the optional `dia` (`diarization`) reference crate and
# turns ON its OWN ort inference path (bundled `segmentation-3.0` + BYO fp32
# WeSpeaker ONNX) so the DER parity suites (`parity_e2e`, `parity_shipping_der`,
# `generate_goldens`) can measure speakerkit's CoreML output against dia-ort.
# Never in the runtime graph — the always-on `diaric` bridge stays ort-free.
# `dia/bundled-segmentation` already implies `dia/ort`; both are named for
# clarity.
dia-oracle = ["dep:dia", "dia/ort", "dia/bundled-segmentation"]
serde = ["dep:serde"]

[dev-dependencies]
hound.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
