[package]
name = "vadkit"
description = "Native CoreML Silero VAD model layer (FluidInference unified-256ms), backend for the silero detector seam"
version.workspace = true
edition.workspace = true
# Unpublishable: the sole dependency, `coremlit`, is an unpublished
# path+version workspace member (crates.io would reject a publish whose
# `coremlit 0.1.0` dependency it cannot resolve). Flip once `coremlit`
# publishes. When T5 adds the `silero` seam dependency it is a released
# version dep, so it does not change this constraint.
publish = false
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["vad", "voice-activity-detection", "silero", "coreml", "speech"]
categories = ["multimedia::audio", "os::macos-apis", "science"]

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin"]

[dependencies]
coremlit.workspace = true
thiserror.workspace = true

[dev-dependencies]
hound.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
