[package]
name = "vadkit"
description = "Native CoreML Silero VAD model layer (FluidInference unified-256ms), backend for the silero detector seam"
version.workspace = true
edition.workspace = true
# Unpublishable: the sole dependency, `coremlit`, is an unpublished
# path+version workspace member (crates.io would reject a publish whose
# `coremlit 0.1.0` dependency it cannot resolve). Flip once `coremlit`
# publishes. When T5 adds the `silero` seam dependency it is a released
# version dep, so it does not change this constraint.
publish = false
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["vad", "voice-activity-detection", "silero", "coreml", "speech"]
categories = ["multimedia::audio", "os::macos-apis", "science"]

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin"]

[dependencies]
coremlit.workspace = true
thiserror.workspace = true

[dev-dependencies]
hound.workspace = true
serde_json.workspace = true
sha2.workspace = true
# Cross-backend characterization oracle (`tests/cross_backend.rs`, spec §6):
# the PUBLISHED silero crate at its default features (`bundled` → `onnx` →
# `ort`) is the ONNX reference stack the CoreML model layer is measured
# against. DEV-ONLY on purpose — `ort` must never enter vadkit's runtime graph
# (proven by `cargo tree -p vadkit -e no-dev -i ort` finding nothing; see the
# test's module docs). Pinned to 0.4.0 (the version on crates.io); T5 bumps to
# the 0.5.0 seam once it publishes, but the dev-only posture does not change.
silero = "0.4.0"

[lints]
workspace = true
