[package]
name = "whisperkit"
description = "Rust port of WhisperKit: on-device Whisper speech-to-text on CoreML"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
coremlit.workspace = true
derive_more.workspace = true
flate2.workspace = true
libc.workspace = true
mach2.workspace = true
rand.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
unicode_categories.workspace = true

serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]
tracing = ["dep:tracing"]

[dev-dependencies]
cpal.workspace = true
criterion.workspace = true
hound.workspace = true
rubato.workspace = true
serde = { workspace = true, features = ["derive"] }
tempfile.workspace = true

[[bench]]
name = "stages"
harness = false

[[bench]]
name = "rtf"
harness = false

[lints]
workspace = true
