[package]
name = "whisperkit"
description = "Rust port of WhisperKit: on-device Whisper speech-to-text on CoreML"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["whisper", "speech-to-text", "coreml", "asr", "transcription"]
categories = ["multimedia::audio", "os::macos-apis", "science"]

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin"]

[dependencies]
coremlit.workspace = true
derive_more.workspace = true
flate2.workspace = true
libc.workspace = true
mach2.workspace = true
rand.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
unicode_categories.workspace = true

serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]
tracing = ["dep:tracing"]

[dev-dependencies]
cpal.workspace = true
criterion.workspace = true
hound.workspace = true
rubato.workspace = true
serde = { workspace = true, features = ["derive"] }
tempfile.workspace = true

# `test = true` compiles this example under the normal libtest harness too
# (in addition to its ordinary `cargo build --examples`/`cargo run`
# build), so `cargo test` also runs its inline `#[cfg(test)]` hermetic
# `BoundedAudioQueue` tests. `main` is unaffected: under `--test`
# compilation the harness supplies its own entry point, so `main` is
# compiled (and therefore still type-checked) but never executed —
# `cargo test` never opens a microphone.
[[example]]
name = "mic_stream"
test = true

[[bench]]
name = "stages"
harness = false

[[bench]]
name = "rtf"
harness = false

[lints]
workspace = true
